--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "firebase": "^11.10.0",
     "framer-motion": "^12.19.2",
     "jquery": "^3.7.1",
     "react": "^19.1.0",
@@ -17,6 +19,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
