--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "framer-motion": "^12.19.2",
     "jquery": "^3.7.1",
