--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-compare-image": "^3.5.5",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
+    "react-quill-new": "^3.4.6",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
