--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "@testing-library/react": "^16.3.0",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "chart.js": "^4.5.0",
+    "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.6",
     "jquery": "^3.7.1",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-compare-image": "^3.5.5",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
