--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "framer-motion": "^12.23.6",
     "jquery": "^3.7.1",
     "react": "^19.1.0",
-    "react-chartjs-2": "^5.3.0",
     "react-bootstrap": "^2.10.10",
+    "react-chartjs-2": "^5.3.0",
     "react-compare-image": "^3.5.5",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
@@ -25,6 +25,7 @@
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
     "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
